set margin of h1 to zero to prevent collapsing.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* ================================= 
+/* =================================
   Base Element Styles
 ==================================== */
 
@@ -36,7 +36,7 @@ img {
 	max-width: 100%;
 }
 
-/* ================================= 
+/* =================================
   Base Layout Styles
 ==================================== */
 
@@ -44,6 +44,7 @@ img {
 
 .name {
 	font-size: 1.25em;
+	margin: 0;
 }
 
 .name a,
@@ -80,7 +81,7 @@ img {
 	width: 190px;
 }
 
-/* ================================= 
+/* =================================
   Media Queries
 ==================================== */
 
